<resources>
    <string name="app_name">CalendarApp</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="data_aktuale">Data Aktuale</string>
    <string name="event_title">Event Title</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="turn_notifications_on">Turn Notifications On</string>
    <string name="add_event">Add Event</string>
    <string name="_1">1</string>
    <string name="event_indicator">Event Indicator</string>
    <string name="clock">Clock</string>
    <string name="previous_button">Previous Button</string>
    <string name="next_button">Next Button</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="albik_s_events">albik\'s Events</string>
    <string name="banner">banner</string>
    <string name="august">August</string>
    <string name="circle">circle</string>
    <string name="_10">10</string>
    <string name="mbrojtja_detyres">Mbrojtja detyres</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="date">Date</string>
    <string name="event">Event</string>
    <string name="notification">Notification</string>
    <string name="delete">Delete</string>
</resources>