<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_custom_calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/blue">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/previousBtn"
            android:background="@mipmap/back_64px"
            android:layout_margin="10dp"
            android:contentDescription="@string/previous_button"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/currentDate"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/data_aktuale"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="3"
            android:paddingTop="14dp"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/nextBtn"
            android:background="@mipmap/forward_64px"
            android:layout_margin="10dp"
            android:contentDescription="@string/next_button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thu"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/gridview"
        android:numColumns="7"
        android:stretchMode="columnWidth">
    </GridView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:text="@string/albik_s_events"
        android:id="@+id/userEvents"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/light_blue">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/allEventsRv"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">
    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>