<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/eventview">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/secondary_input"
        android:id="@+id/eventname"
        android:hint="@string/event_title"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textShortMessage"
        android:layout_margin="20dp"
        android:gravity="center">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/time_64px"
            android:layout_margin="10dp"
            android:id="@+id/seteventtime"
            android:contentDescription="@string/clock">
        </ImageButton>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_am"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/eventtime"
            android:layout_margin="10dp">
        </TextView>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_notifications_on"
        android:textColor="@android:color/white"
        android:buttonTint="@android:color/white"
        android:layout_gravity="center"
        android:id="@+id/alarme">
    </CheckBox>

    <Button
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:text="@string/add_event"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/secondarybutton"
        android:id="@+id/addevent">
    </Button>

</LinearLayout>