<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="594dp"
        android:layout_marginTop="-150dp"
        android:src="@mipmap/register"
        android:contentDescription="banner">
    </ImageView>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:id="@+id/username"
        android:textSize="15dp"
        android:inputType="text"
        android:textColorHint="@color/blue"
        android:layout_below="@id/banner"
        android:background="@drawable/input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp">
    </EditText>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:textSize="15dp"
        android:textColorHint="@color/blue"
        android:background="@drawable/input"
        android:id="@+id/email"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
    </EditText>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:layout_below="@id/email"
        android:textSize="15dp"
        android:textColorHint="@color/blue"
        android:background="@drawable/input"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
    </EditText>

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/register"
        android:layout_below="@id/password"
        android:id="@+id/register"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:layout_marginTop="30dp">
    </Button>


    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/register"
        android:background="@drawable/secondarybutton"
        android:text="@string/login"
        android:id="@+id/login"
        android:textColor="#A4A4A4"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">
    </Button>


</RelativeLayout>