<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="430dp"
        android:layout_height="741dp"
        android:layout_marginTop="-200dp"
        android:src="@mipmap/login"
        android:contentDescription="banner">
    </ImageView>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="-90dp"
        android:layout_gravity="center"
        android:background="@drawable/input"
        android:textSize="15dp"
        android:textColorHint="@color/blue"
        android:id="@+id/username"
        android:hint="@string/username"
        android:inputType="text">
    </EditText>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/blue"
        android:textSize="15dp"
        android:id="@+id/password"
        android:background="@drawable/input">
    </EditText>

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/register">
    </Button>

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/secondarybutton"
        android:text="@string/sign_up"
        android:id="@+id/signup"
        android:textColor="#A4A4A4"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
    </Button>

</LinearLayout>