<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="12sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_dark"
                android:id="@+id/eventdate"
                android:textStyle="bold"
                android:text="@string/date"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_purple"
                android:id="@+id/eventname"
                android:textStyle="bold"
                android:text="@string/event"
                android:textSize="40sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/eventtime"
                android:textStyle="bold"
                android:text="@string/_00_00_am"
                android:textSize="15sp">
            </TextView>

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/alarmeBtn"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_action_notification_off"
                android:background="@drawable/register"
                android:layout_gravity="center"
                android:contentDescription="@string/notification">
            </ImageButton>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deletevent"
                android:text="@string/delete"
                android:background="@drawable/register"
                android:textColor="@color/white"
                android:layout_margin="10dp">
            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>